<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="editTextNameForOrder">Enter name for the order.</string>
    <string name="textViewQuantity">Quantity</string>
    <string name="textViewPrice">Order Summary</string>
    <string name="textViewOrder">Order</string>
    <string name="textViewOrderSummaryDetails">Place an order to see the price.</string>
    <string name="textViewToppings">Toppings</string>
    <string name="textViewQuantityNumber" translatable="false">0</string>
    <string name="buttonMinus" translatable="false">-</string>
    <string name="buttonPlus" translatable="false">+</string>

    <string name="strName">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="strBase_price">Base Price</string>
    <string name="strCinnamon">Cinnamon</string>
    <string name="strChocolate">Chocolate</string>
    <string name="strWhipped_cream">Whipped Cream</string>
    <string name="strTotal">Total: $</string>
    <string name="strThank_you">Thank You!</string>
    <string name="emailSubjectLine">JustJava order for</string>
    <string name="cannotExceed100Message">You cannot order greater than 100 at this time.</string>
    <string name="strEach">each</string>
</resources>
